feat: update /admin/reset to add route protection and users deletion
