# docs/swagger.json
@@ -32,12 +32,12 @@
         },
         "/admin/reset": {
             "post": {
-                "description": "Reset the number of times Chirpy has been visisted to 0",
+                "description": "Delete all users in database and reset the number of times Chirpy has been visisted to 0",
                 "produces": [
                     "text/plain"
                 ],
                 "tags": [
-                    "metrics"
+                    "user"
                 ],
                 "summary": "Reset Metrics",
                 "operationId": "post-reset",
@@ -46,6 +46,12 @@
                         "description": "Hits set to 0",
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Failed to delete users in db",
+                        "schema": {
+                            "$ref": "#/definitions/helpers.ErrorResponse"
                         }
                     }
                 }
@@ -86,7 +92,7 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Create a new user",
+                "summary": "Create new user",
                 "operationId": "post-create-user",
                 "parameters": [
                     {
